--- a/Dibimbing - Funnel and Cohort Analysis - Assignment.ipynb
+++ b/Dibimbing - Funnel and Cohort Analysis - Assignment.ipynb
@@ -12,7 +12,7 @@
         "tZoKWff7hMIP",
         "kZxRW8r6hP4H"
       ],
-      "authorship_tag": "ABX9TyPbVRfWvN2TEYk4y62Zi1xE",
+      "authorship_tag": "ABX9TyOcsTYtTcFjpde85YecDQZL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "id": "AhJhYeAOfFFW",
         "outputId": "1bd6896f-2e52-428a-c847-73412724b367"
       },
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 326,
+      "execution_count": null,
       "metadata": {
         "id": "wDRyizrLe5To"
       },
@@ -160,12 +160,11 @@
       "metadata": {
         "id": "sGad4iwGfFIW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "54caa3bc-fbd4-40f4-89f6-968fccd2a945"
       },
-      "execution_count": 327,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,12 +382,11 @@
       "metadata": {
         "id": "sKpz8gLkfFK2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "2ab4d246-7cc7-4eab-8cb6-d384d8361d71"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +730,7 @@
       "metadata": {
         "id": "u27Hz2uMA_T2"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +746,7 @@
         "id": "viQJfHq0Btv3",
         "outputId": "52998449-3299-4780-85cc-30adfa9cb13e"
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +796,7 @@
       "metadata": {
         "id": "bgzARohDBtyx"
       },
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -814,7 +812,7 @@
         "id": "aJI5LPg4Cpx-",
         "outputId": "3cdbbe9d-1381-4518-f4bc-8e74a6e12da5"
       },
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +844,7 @@
       "metadata": {
         "id": "VW0sEvBpCypf"
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -862,7 +860,7 @@
         "id": "YQjrIiS5Fus_",
         "outputId": "b6fb0522-f835-43de-98c1-a0920c4ea1c3"
       },
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +899,7 @@
         "id": "uFqkvVbNEw8v",
         "outputId": "700ffc78-b3f9-4b3d-fc8c-c9a1054efba1"
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +928,7 @@
       "metadata": {
         "id": "Y_WNCNMSg4hv"
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -946,7 +944,7 @@
         },
         "outputId": "58ad1c18-f265-4109-996f-b3acc83185a5"
       },
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -983,12 +981,11 @@
       "metadata": {
         "id": "y9QnZLI7g4uw",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "d7a73d83-8df2-40b2-c96a-e1ccaf0cdca3"
       },
-      "execution_count": 338,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2135,13 +2132,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "EN26A6ZGAVkc",
         "outputId": "65fe60ae-bcd1-4dd1-a3d8-4c2f1919411f"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3171,7 +3167,7 @@
         "id": "B9_fGTuuAVm0",
         "outputId": "9bb1822c-78a8-477c-ebce-b344ee93ac1d"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3230,7 +3226,7 @@
       "metadata": {
         "id": "beaFO_5lfFNm"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3248,7 +3244,7 @@
         },
         "outputId": "07d988c7-8463-4afe-8efe-ee2a882e5db0"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3478,7 +3474,7 @@
         "id": "aUUeZYMtOnaB",
         "outputId": "f6f8bfe0-544d-4226-f9b9-28e994c2a759"
       },
-      "execution_count": 343,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3514,7 +3510,7 @@
         },
         "outputId": "a2f2e990-64a8-4ebf-a919-3558c5ad6136"
       },
-      "execution_count": 344,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3848,7 +3844,7 @@
       "metadata": {
         "id": "Py2flR5TSFVx"
       },
-      "execution_count": 345,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3864,7 +3860,7 @@
         },
         "outputId": "d1f92f8d-02a7-4f0a-a289-7077a90b8a14"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3907,7 +3903,7 @@
       "metadata": {
         "id": "sHVmr5CnhSq3"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3923,7 +3919,7 @@
         },
         "outputId": "0a1051cc-bc22-425f-8f35-9bda3a2292e7"
       },
-      "execution_count": 348,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3958,7 +3954,7 @@
         "id": "5kTtvTvFS87i",
         "outputId": "40f2cfe6-105b-4cc1-8d03-68009a77b091"
       },
-      "execution_count": 349,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3999,7 +3995,7 @@
       "metadata": {
         "id": "lgeAPuGHS9Ag"
       },
-      "execution_count": 350,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4019,7 +4015,7 @@
         "id": "mUDC_w4yS9DI",
         "outputId": "7af54350-2ea5-4a54-88c6-ef817227e172"
       },
-      "execution_count": 351,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4332,7 +4328,7 @@
       "metadata": {
         "id": "GNYHiWc7S824"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4353,7 +4349,7 @@
       "metadata": {
         "id": "Wuf7XJfZWeAq"
       },
-      "execution_count": 353,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4372,7 +4368,7 @@
       "metadata": {
         "id": "l0ocTBYKS9Fi"
       },
-      "execution_count": 354,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4388,7 +4384,7 @@
         "id": "CRtEnaN5YzGz",
         "outputId": "2ab5a91e-5faa-47de-c6f3-4a57611546d6"
       },
-      "execution_count": 355,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4428,7 +4424,7 @@
       "metadata": {
         "id": "0dMZZ3FtkWtd"
       },
-      "execution_count": 356,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4440,7 +4436,7 @@
       "metadata": {
         "id": "qU0HvaB7oOtg"
       },
-      "execution_count": 357,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4456,7 +4452,7 @@
         "id": "vO05nVD2oeO1",
         "outputId": "e26a60d1-ad46-4889-a538-bc1aba440be8"
       },
-      "execution_count": 359,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4484,7 +4480,7 @@
       "metadata": {
         "id": "o_6-zoMMlsat"
       },
-      "execution_count": 360,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4500,7 +4496,7 @@
       "metadata": {
         "id": "Lt4FgBURY64j"
       },
-      "execution_count": 361,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4520,7 +4516,7 @@
       "metadata": {
         "id": "bvcxokG2S9H5"
       },
-      "execution_count": 362,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4538,7 +4534,7 @@
       "metadata": {
         "id": "07i3C4JpS9Kk"
       },
-      "execution_count": 363,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4556,7 +4552,7 @@
         "id": "hwv6EMuFbF8k",
         "outputId": "74ac0321-bf9e-4bef-8fd1-b495d2e6dd37"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4889,7 +4885,7 @@
       "metadata": {
         "id": "wrLSJnSxcBtk"
       },
-      "execution_count": 365,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4907,7 +4903,7 @@
         "id": "SDUqGsWOV0UR",
         "outputId": "8caab8c8-f54a-41a7-9bee-ea5e7eff3539"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5248,7 +5244,7 @@
         "id": "1vFjKR9yV0ZY",
         "outputId": "86a6775f-06bd-4103-8972-5c1a925e7243"
       },
-      "execution_count": 367,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5278,7 +5274,28 @@
       "source": [
         "Dari hasil perhitungan dan visualisasi sebelumnya, dapat diketahui:\n",
         "\n",
-        "1. "
+        "1. Meninjau hasil perhitungan cohort_counts, diketahui jumlah user day 1 setiap bulan memiliki perubahan yang fluktuatif, dimana:\n",
+        "  - Jumlah user day 1 memiliki peak pada bulan Agustus 2020 sebanyak 22490,0 users dan memiliki titik terendah pada bulan Februari 2020 sebanyak 1376,0 users\n",
+        "  - Penurunan pada awalnya Jan 2022 - Feb 2022, kenaikan pada Feb 2022 - Mei 2022, penurunan pada Mei 2022 - Jun 2022, kenaikan pada Jun 2022 - Agu 2022, penurunan pada Agu 2022 - Nov 2022\n",
+        "2. Meninjau hasil visualisasi retention, diketahui %perubahan jumlah user mengalami penurunan yang signifikan dari day 1 ke day 2 sebesar 68% - 87%\n",
+        "3. Meninjau hasil visualisasi retention, berdasarkan baris bulan Januari 2020, diketahui %perubahan jumlah user mengalami perubahan yang fluktuatif, dimana:\n",
+        "  - Terjadi penurunan pada awalnya day 1 - day 4, kenaikan pada day 4 - day 5, penurunan lagi pada day 5 - day 7, kenaikan lagi pada day 7 - day 8, dan penurunan lagi pada day 8 - day 11\n",
+        "4. Meninjau hasil visualisasi retention, %penurunan jumlah user semakin besar seiring berganti bulan\n",
+        "5. Meninjau hasil visualisasi retention, peristiwa kenaikan kembali (rebound) menjadi semakin cepat terjadi, dimana:\n",
+        "  - Rebound pada Jan 2020 terjadi pada day 4\n",
+        "  - Rebound pada Feb 2020 terjadi pada day 3\n",
+        "  - Rebound pada Mar 2020 terjadi pada day 2\n",
+        "  - Rebound pada Apr 2020 terjadi pada day 3\n",
+        "  - Rebound pada Mei 2020 terjadi pada day 2\n",
+        "  - Tidak ada rebound pada Jun 2020\n",
+        "  - Tidak ada rebound pada Jul 2020\n",
+        "  - dst.\n",
+        "\n",
+        "Kesimpulan yang dapat ditarik dari yang diketahui, antara lain:\n",
+        "1. Sebaiknya dianalisa faktor yang menyebabkan terjadinya peak jumlah user pada sekitar Jul 2020 - Agu 2020 sehingga dapat memperoleh insight yang kemungkinan dapat membantu marketing\n",
+        "2. Jika menggunakna Elbow Analysis, maka titik Elbow atau titik kritisnya terletak pada sekitar day 1 - day 2 sehingga perlu dilakukan upaya untuk mencegah terjadinya penurunan jumlah user yang besar\n",
+        "2. Sebaiknya dianalisa faktor yang menyebabkan peristiwa terjadinya rebound jumlah user yang sempat terjadi pada bulan Jan 2020 - Mei 2020 sehingga dapat memperoleh insight yang kemungkinan dapat membantu marketing\n",
+        "4. Sebaiknya dianalisa faktor yang menyebabkan peristiwa rebound jumlah user yang semakin awal terjadi sehingga dapat memperoleh insight yang kemungkinan dapat membantu marketing "
       ],
       "metadata": {
         "id": "gjOVN1X2WNCq"
